--- a/_data/team.yml
+++ b/_data/team.yml
@@ -10,3 +10,18 @@
 - name: Nafisa
   title: Accounts Manager
   image: nafisa.jpg
+- name: Alfonso
+  title: Infrastructure Manager
+  image: alfonso.jpg
+- name: Daniel
+  title: IT Analyst
+  image: daniel.jpg
+- name: Grace
+  title: Billing
+  image: grace.jpg
+- name: Sergey
+  title: Telecom and Network Engineer
+  image: sergey.jpg
+- name: Vimo
+  title: IT Analyst
+  image: vimo.jpg
