Fix linkedin link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,5 +24,5 @@ social_media:
     link: https://www.facebook.com/vnkconsulting/
     icon: facebook.svg
   - name: Linked In
-    link: https://www.linkedin.com/
+    link: https://www.linkedin.com/company/vnk-consulting-group/
     icon: linkedin.svg
